made improvements