@@ -4,10 +4,12 @@ import com.devsuperior.demo.dto.DepartmentDTO;
 import com.devsuperior.demo.entities.Department;
 import com.devsuperior.demo.repository.DepartmentRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class DepartmentService {
@@ -18,8 +20,8 @@ public class DepartmentService {
 
     @Transactional(readOnly = true)
     public List<DepartmentDTO> findAll() {
-        List<Department> result = departmentRepository.findAllOrderByName();
-        return result.stream().map(x -> new DepartmentDTO(x)).toList();
+        List<Department> result = departmentRepository.findAll(Sort.by("name"));
+        return result.stream().map(x -> new DepartmentDTO(x)).collect(Collectors.toList());
     }
 
 }
